--- a/style2.css
+++ b/style2.css
@@ -1,24 +1,26 @@
 body {
   background-color: black;
 }
+#container {
+  position:absolute;
+  width: 800px;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  font-size: 25px;
+}
+
 #canvas1 {
-  position: absolute;
+  position: relative;
   border: 3px solid white;
   width: 800px;
   height: 700px;
-  transform: translate(-50%,-50%);
-  top: 50%;
-  left: 50%;
 }
 
-.controls {
-  position: absolute;
-  z-index: 10;
-  top: 50px;
-  left: 50%;
-  transform: translate(-50%);
+#slider {
+  width: 100%;
 }
 
-.controls, select, option {
-  font-size: 25px;
+p {
+  color: white;
 }
